# osagent

./: .env.example  .gitignore  README.md  collected-data.xlsx  osAgent项目文档.md  pyproject.toml  方案.md  需求
data/: manifest.json
deploy/: Caddyfile  README.md  deploy-cn.sh  deploy.sh  osagent.env.example  osagent.service
src/osagent/: __init__.py  cli.py  config.py  logging.py
src/osagent/agent/: __init__.py
src/osagent/analyzer/: __init__.py  contract.py  core.py  directory_tree.py  feature_tags.py  jobs.py  l1_quick.py  l2_kernel.py  l3_signature.py  pipeline.py  storage.py  syscall_dict.py  tech_highlights.py  template_fingerprints.py
src/osagent/compare/: __init__.py  core.py
src/osagent/ingest/: __init__.py  cloner.py  manifest.py
src/osagent/llm/: __init__.py  deepseek.py
src/osagent/qa/: __init__.py  agent.py  prompt.py  retriever.py
src/osagent/qa/verifier/: __init__.py  citation_cop.py  claim_verifier.py  committee.py
src/osagent/report/: __init__.py  compare.py  html.py  single.py  storage.py
src/osagent/retrieval/: __init__.py
src/osagent/schemas/: __init__.py  compare.py  facts.py  manifest.py  qa.py  verification.py
src/osagent/web/: __init__.py  app.py  auth.py
src/osagent/web/static/: app.js  index.html  report.css  report.html  report.js  styles.css
tests/: test_smoke.py
